# sc290_materials

./: .gitignore  Makefile  README.md  clean_dataset_text.py  pyproject.toml
.github/: copilot-instructions.md
2_text_prep/: 2_text_prep.ipynb
3_vectors/: 3_vectors.ipynb
4_topic_modelling/: 4_topic_modelling.ipynb
5_sentiment/: 5B_LLM_variation_test.ipynb  5_sentiment_analysis.ipynb  download_lyrics.ipynb  lyrics_sentiment.ipynb  validating_approaches.py
6_networks_1/: Gephi Session Notes.md  Network Interpretation Task.md  networks_1.ipynb  prep_GOT_data.py  prep_HP_data.py  prep_friends_data.py
8_creative_methods/: 8_creative_methods.ipynb  idea_generator.ipynb
built_workbooks/: 2_text_prep_workbook.ipynb  3_vectors_workbook.ipynb  4_topic_modelling_workbook.ipynb  5A_download_lyrics_workbook.ipynb  5B_LLM_variation_test_workbook.ipynb  5_sentiment_analysis_workbook.ipynb  8_creative_methods_workbook.ipynb  idea_generator_workbook.ipynb  networks_2_workbook.ipynb
prototypes/: bertopic.ipynb  lyrics_sentiment.ipynb  networks_1.ipynb  nlp1.ipynb  snippets.py
workbook_maker/: workbook_maker.py
