[project]
name = "sc290-materials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "pandas<3.0.0,>=2.2.2",
    "ipykernel<7.0.0,>=6.29.5",
    "pyarrow>=17.0.0",
    "fastparquet<2025.0.0,>=2024.5.0",
    "google-genai>=1.28.0",
    "lyricsgenius>=3.6.5",
    "embedding-atlas>=0.8.0",
    "black>=25.1.0",
    "bertopic>=0.17.3",
    "anywidget>=0.9.18",
    "datamapplot>=0.6.3",
    "spacy>=3.8.7",
    "pip>=25.2",
]
